feat: Translate marketplace page with i18next
- Replaced useLanguage with useTranslation from react-i18next
- Translated all user-visible strings in marketplace.jsx
- Added comprehensive translation keys for marketplace section
- Updated en.json, fr.json, ar.json, pt.json with all marketplace translations
- Marketplace page now fully switches languages when user selects language

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -20,6 +20,71 @@
   "quick_access": "وصول سريع",
   "view_all_countries": "عرض جميع البلدان",
   "source_by_country": "التوريد حسب البلد",
-  "popular_categories": "الفئات الشائعة"
+  "popular_categories": "الفئات الشائعة",
+  "marketplace": {
+    "searchPlaceholder": "ابحث عن منتجات أو موردين أو فئات...",
+    "verifiedOnly": "موثوق فقط",
+    "fastResponse": "استجابة سريعة",
+    "readyToShip": "جاهز للشحن",
+    "allCountries": "جميع البلدان",
+    "allCategories": "جميع الفئات",
+    "category": "الفئة",
+    "country": "البلد",
+    "verification": "التحقق",
+    "priceRange": "نطاق السعر",
+    "minPrice": "أقل سعر",
+    "maxPrice": "أعلى سعر",
+    "minimumOrder": "الحد الأدنى للطلب",
+    "minQuantity": "الحد الأدنى للكمية",
+    "certifications": "الشهادات",
+    "isoCertified": "معتمد ISO",
+    "tradeShieldEligible": "مؤهل لـ Trade Shield",
+    "leadTime": "وقت التسليم",
+    "ready": "جاهز",
+    "within7Days": "خلال 7 أيام",
+    "within30Days": "خلال 30 يوماً",
+    "applyFilters": "تطبيق المرشحات",
+    "clearAll": "مسح الكل",
+    "popularMarkets": "الأسواق الشائعة",
+    "allAfricanMarkets": "جميع الأسواق الأفريقية",
+    "productsFrom": "منتجات من {{country}}",
+    "under100": "أقل من 100 دولار",
+    "lowMOQ": "حد أدنى للطلب منخفض",
+    "bestMatchForYou": "أفضل تطابق لك",
+    "grid": "شبكة",
+    "list": "قائمة",
+    "newestListings": "أحدث القوائم",
+    "lowestPrice": "أقل سعر",
+    "highestPrice": "أعلى سعر",
+    "lowestMOQ": "أقل حد أدنى للطلب",
+    "highestMOQ": "أعلى حد أدنى للطلب",
+    "bestMatch": "أفضل تطابق",
+    "mostViewed": "الأكثر مشاهدة",
+    "productOverview": "نظرة عامة على المنتج",
+    "noDescriptionYet": "لم يضف المورد وصفاً مفصلاً بعد.",
+    "verifiedSupplier": "مورد موثوق",
+    "verificationInProgress": "التحقق قيد التقدم",
+    "whyBuyersTrust": "لماذا يثق المشترون بهذا المورد",
+    "afrikoniVerified": "موثوق من أفريكوني",
+    "typicalUseCases": "حالات الاستخدام النموذجية",
+    "requestDetailedQuote": "طلب عرض سعر مفصل",
+    "supplier": "مورد",
+    "contactSupplier": "اتصل بالمورد",
+    "viewSupplierProfile": "عرض ملف المورد",
+    "generateRFQWithAI": "إنشاء طلب عرض سعر بالذكاء الاصطناعي",
+    "noExactMatches": "لا توجد تطابقات دقيقة — لكن تجارتك لا تزال ممكنة",
+    "afrikoniWorksThroughRFQs": "يعمل أفريكوني من خلال طلبات عرض الأسعار، وليس فقط القوائم. سيجد فريقنا موردين موثوقين لك.",
+    "postRequestRFQ": "نشر طلب (طلب عرض سعر)",
+    "talkToTradeAdvisor": "التحدث إلى مستشار تجاري",
+    "verifiedSuppliersOnly": "موردون موثوقون فقط",
+    "humanLedSourcing": "توريد بقيادة بشرية",
+    "escrowProtected": "محمي بالضمان",
+    "mostSuccessfulTradesHint": "معظم الصفقات الناجحة على أفريكوني تبدأ بطلب، وليس بحثاً.",
+    "moreVerifiedSuppliers": "المزيد من الموردين الموثوقين",
+    "moreSuppliersOnboardedDaily": "يتم إضافة المزيد من الموردين الموثوقين يومياً",
+    "postAnRFQ": "نشر طلب عرض سعر",
+    "viewAllCountries": "عرض جميع البلدان",
+    "moq": "الحد الأدنى للطلب",
+    "units": "وحدات"
+  }
 }
-
