--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -20,6 +20,69 @@
   "quick_access": "Quick Access",
   "view_all_countries": "View All Countries",
   "source_by_country": "Source by Country",
-  "popular_categories": "Popular Categories"
+  "popular_categories": "Popular Categories",
+  "marketplace": {
+    "searchPlaceholder": "Search products, suppliers, categories...",
+    "verifiedOnly": "Verified Only",
+    "fastResponse": "Fast Response",
+    "readyToShip": "Ready to Ship",
+    "allCountries": "All Countries",
+    "allCategories": "All Categories",
+    "category": "Category",
+    "country": "Country",
+    "verification": "Verification",
+    "priceRange": "Price Range",
+    "minPrice": "Min Price",
+    "maxPrice": "Max Price",
+    "minimumOrder": "Minimum Order",
+    "minQuantity": "Min Quantity",
+    "certifications": "Certifications",
+    "isoCertified": "ISO Certified",
+    "tradeShieldEligible": "Trade Shield eligible",
+    "leadTime": "Lead Time",
+    "ready": "Ready",
+    "within7Days": "Within 7 days",
+    "within30Days": "Within 30 days",
+    "applyFilters": "Apply Filters",
+    "clearAll": "Clear All",
+    "popularMarkets": "Popular Markets",
+    "allAfricanMarkets": "All African Markets",
+    "productsFrom": "Products from {{country}}",
+    "under100": "Under $100",
+    "lowMOQ": "Low MOQ",
+    "bestMatchForYou": "Best match for you",
+    "grid": "Grid",
+    "list": "List",
+    "newestListings": "Newest listings",
+    "lowestPrice": "Lowest price",
+    "highestPrice": "Highest price",
+    "lowestMOQ": "Lowest MOQ",
+    "highestMOQ": "Highest MOQ",
+    "bestMatch": "Best match",
+    "mostViewed": "Most viewed",
+    "productOverview": "Product overview",
+    "noDescriptionYet": "Supplier has not added a detailed description yet.",
+    "verifiedSupplier": "Verified Supplier",
+    "verificationInProgress": "Verification in progress",
+    "whyBuyersTrust": "Why buyers trust this supplier",
+    "afrikoniVerified": "Afrikoni verified",
+    "typicalUseCases": "Typical use cases",
+    "requestDetailedQuote": "Request detailed quote",
+    "supplier": "Supplier",
+    "contactSupplier": "Contact supplier",
+    "viewSupplierProfile": "View supplier profile",
+    "generateRFQWithAI": "Generate RFQ with AI",
+    "noExactMatches": "No exact matches — but your trade can still happen",
+    "afrikoniWorksThroughRFQs": "Afrikoni works through RFQs, not just listings. Our team will source verified suppliers for you.",
+    "postRequestRFQ": "Post a Request (RFQ)",
+    "talkToTradeAdvisor": "Talk to a Trade Advisor",
+    "verifiedSuppliersOnly": "Verified suppliers only",
+    "humanLedSourcing": "Human-led sourcing",
+    "escrowProtected": "Escrow-protected",
+    "mostSuccessfulTradesHint": "Most successful trades on Afrikoni start with a request, not a search.",
+    "moreVerifiedSuppliers": "More Verified Suppliers",
+    "moreSuppliersOnboardedDaily": "More verified suppliers are being onboarded daily",
+    "postAnRFQ": "Post an RFQ",
+    "viewAllCountries": "View All Countries"
+  }
 }
-
