--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -20,6 +20,71 @@
   "quick_access": "Accès rapide",
   "view_all_countries": "Voir tous les pays",
   "source_by_country": "S'approvisionner par pays",
-  "popular_categories": "Catégories populaires"
+  "popular_categories": "Catégories populaires",
+  "marketplace": {
+    "searchPlaceholder": "Rechercher des produits, fournisseurs, catégories...",
+    "verifiedOnly": "Vérifié uniquement",
+    "fastResponse": "Réponse rapide",
+    "readyToShip": "Prêt à expédier",
+    "allCountries": "Tous les pays",
+    "allCategories": "Toutes les catégories",
+    "category": "Catégorie",
+    "country": "Pays",
+    "verification": "Vérification",
+    "priceRange": "Gamme de prix",
+    "minPrice": "Prix minimum",
+    "maxPrice": "Prix maximum",
+    "minimumOrder": "Commande minimum",
+    "minQuantity": "Quantité minimum",
+    "certifications": "Certifications",
+    "isoCertified": "Certifié ISO",
+    "tradeShieldEligible": "Éligible au Trade Shield",
+    "leadTime": "Délai de livraison",
+    "ready": "Prêt",
+    "within7Days": "Sous 7 jours",
+    "within30Days": "Sous 30 jours",
+    "applyFilters": "Appliquer les filtres",
+    "clearAll": "Tout effacer",
+    "popularMarkets": "Marchés populaires",
+    "allAfricanMarkets": "Tous les marchés africains",
+    "productsFrom": "Produits de {{country}}",
+    "under100": "Moins de 100 $",
+    "lowMOQ": "MOQ faible",
+    "bestMatchForYou": "Meilleur match pour vous",
+    "grid": "Grille",
+    "list": "Liste",
+    "newestListings": "Nouvelles annonces",
+    "lowestPrice": "Prix le plus bas",
+    "highestPrice": "Prix le plus élevé",
+    "lowestMOQ": "MOQ le plus bas",
+    "highestMOQ": "MOQ le plus élevé",
+    "bestMatch": "Meilleur match",
+    "mostViewed": "Les plus consultés",
+    "productOverview": "Aperçu du produit",
+    "noDescriptionYet": "Le fournisseur n'a pas encore ajouté de description détaillée.",
+    "verifiedSupplier": "Fournisseur vérifié",
+    "verificationInProgress": "Vérification en cours",
+    "whyBuyersTrust": "Pourquoi les acheteurs font confiance à ce fournisseur",
+    "afrikoniVerified": "Vérifié par Afrikoni",
+    "typicalUseCases": "Cas d'utilisation typiques",
+    "requestDetailedQuote": "Demander un devis détaillé",
+    "supplier": "Fournisseur",
+    "contactSupplier": "Contacter le fournisseur",
+    "viewSupplierProfile": "Voir le profil du fournisseur",
+    "generateRFQWithAI": "Générer une RFQ avec l'IA",
+    "noExactMatches": "Aucune correspondance exacte — mais votre commerce peut toujours avoir lieu",
+    "afrikoniWorksThroughRFQs": "Afrikoni fonctionne via des RFQ, pas seulement des annonces. Notre équipe trouvera des fournisseurs vérifiés pour vous.",
+    "postRequestRFQ": "Publier une demande (RFQ)",
+    "talkToTradeAdvisor": "Parler à un conseiller commercial",
+    "verifiedSuppliersOnly": "Fournisseurs vérifiés uniquement",
+    "humanLedSourcing": "Approvisionnement dirigé par l'humain",
+    "escrowProtected": "Protégé par séquestre",
+    "mostSuccessfulTradesHint": "La plupart des commerces réussis sur Afrikoni commencent par une demande, pas une recherche.",
+    "moreVerifiedSuppliers": "Plus de fournisseurs vérifiés",
+    "moreSuppliersOnboardedDaily": "Plus de fournisseurs vérifiés sont intégrés quotidiennement",
+    "postAnRFQ": "Publier une RFQ",
+    "viewAllCountries": "Voir tous les pays",
+    "moq": "CMD",
+    "units": "unités"
+  }
 }
-
