--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -20,6 +20,71 @@
   "quick_access": "Acesso rápido",
   "view_all_countries": "Ver todos os países",
   "source_by_country": "Fornecer por país",
-  "popular_categories": "Categorias populares"
+  "popular_categories": "Categorias populares",
+  "marketplace": {
+    "searchPlaceholder": "Pesquisar produtos, fornecedores, categorias...",
+    "verifiedOnly": "Apenas verificado",
+    "fastResponse": "Resposta rápida",
+    "readyToShip": "Pronto para enviar",
+    "allCountries": "Todos os países",
+    "allCategories": "Todas as categorias",
+    "category": "Categoria",
+    "country": "País",
+    "verification": "Verificação",
+    "priceRange": "Faixa de preço",
+    "minPrice": "Preço mínimo",
+    "maxPrice": "Preço máximo",
+    "minimumOrder": "Pedido mínimo",
+    "minQuantity": "Quantidade mínima",
+    "certifications": "Certificações",
+    "isoCertified": "Certificado ISO",
+    "tradeShieldEligible": "Elegível para Trade Shield",
+    "leadTime": "Prazo de entrega",
+    "ready": "Pronto",
+    "within7Days": "Dentro de 7 dias",
+    "within30Days": "Dentro de 30 dias",
+    "applyFilters": "Aplicar filtros",
+    "clearAll": "Limpar tudo",
+    "popularMarkets": "Mercados populares",
+    "allAfricanMarkets": "Todos os mercados africanos",
+    "productsFrom": "Produtos de {{country}}",
+    "under100": "Abaixo de $100",
+    "lowMOQ": "MOQ baixo",
+    "bestMatchForYou": "Melhor correspondência para você",
+    "grid": "Grade",
+    "list": "Lista",
+    "newestListings": "Novos anúncios",
+    "lowestPrice": "Menor preço",
+    "highestPrice": "Maior preço",
+    "lowestMOQ": "Menor MOQ",
+    "highestMOQ": "Maior MOQ",
+    "bestMatch": "Melhor correspondência",
+    "mostViewed": "Mais visualizados",
+    "productOverview": "Visão geral do produto",
+    "noDescriptionYet": "O fornecedor ainda não adicionou uma descrição detalhada.",
+    "verifiedSupplier": "Fornecedor verificado",
+    "verificationInProgress": "Verificação em andamento",
+    "whyBuyersTrust": "Por que os compradores confiam neste fornecedor",
+    "afrikoniVerified": "Verificado pela Afrikoni",
+    "typicalUseCases": "Casos de uso típicos",
+    "requestDetailedQuote": "Solicitar cotação detalhada",
+    "supplier": "Fornecedor",
+    "contactSupplier": "Contatar fornecedor",
+    "viewSupplierProfile": "Ver perfil do fornecedor",
+    "generateRFQWithAI": "Gerar RFQ com IA",
+    "noExactMatches": "Nenhuma correspondência exata — mas sua negociação ainda pode acontecer",
+    "afrikoniWorksThroughRFQs": "A Afrikoni funciona através de RFQs, não apenas listagens. Nossa equipe encontrará fornecedores verificados para você.",
+    "postRequestRFQ": "Publicar uma solicitação (RFQ)",
+    "talkToTradeAdvisor": "Falar com um consultor comercial",
+    "verifiedSuppliersOnly": "Apenas fornecedores verificados",
+    "humanLedSourcing": "Fornecimento liderado por humanos",
+    "escrowProtected": "Protegido por garantia",
+    "mostSuccessfulTradesHint": "A maioria das negociações bem-sucedidas na Afrikoni começa com uma solicitação, não uma pesquisa.",
+    "moreVerifiedSuppliers": "Mais Fornecedores Verificados",
+    "moreSuppliersOnboardedDaily": "Mais fornecedores verificados estão sendo integrados diariamente",
+    "postAnRFQ": "Publicar uma RFQ",
+    "viewAllCountries": "Ver todos os países",
+    "moq": "MOQ",
+    "units": "unidades"
+  }
 }
-
