feat: Translate remaining homepage components (RFQCard, RFQProcessPanel, PartnerLogos)
Phase 5 Complete:
- Translated RFQCard component (Post a Trade Request, Get matched description)
- Translated RFQProcessPanel component (What happens after RFQ, all 4 steps)
- Translated PartnerLogos component (Trusted by businesses text)
- Added comprehensive RFQ and home translation keys to all language files
- Homepage now fully switches languages when user selects language

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -86,5 +86,21 @@
     "viewAllCountries": "عرض جميع البلدان",
     "moq": "الحد الأدنى للطلب",
     "units": "وحدات"
+  },
+  "rfq": {
+    "postTradeRequest": "نشر طلب تجاري (طلب عرض سعر)",
+    "getMatchedDescription": "احصل على مطابقة مع موردين أفارقة موثوقين. يتم المراجعة خلال 24–48 ساعة.",
+    "whatHappensAfter": "ماذا يحدث بعد نشر طلب عرض سعر؟",
+    "step1Title": "إرسال الطلب",
+    "step1Description": "2–3 دقائق",
+    "step2Title": "أفريكوني يتحقق من الموردين والشروط",
+    "step2Description": "مراجعة يدوية",
+    "step3Title": "تتلقى عروض أسعار مختارة",
+    "step3Description": "24–48 ساعة",
+    "step4Title": "التجارة منسقة بأمان",
+    "step4Description": "معاملة محمية"
+  },
+  "home": {
+    "trustedByBusinesses": "موثوق به من قبل الشركات الرائدة في أفريقيا"
   }
 }
