fix: Add missing translation keys for orders page and navbar
TRANSLATION KEYS ADDED:
✅ common.search → 'Search'
✅ common.searchOrders → 'Search orders by ID, product, or supplier...'
✅ common.all → 'All'
✅ dashboard.pending → 'Pending'
✅ dashboard.intransit → 'In Transit'
✅ dashboard.totalvalue → 'Total Value'
✅ DASHBOARD.PENDING → 'Pending' (uppercase variant)
✅ DASHBOARD.INTRANSIT → 'In Transit' (uppercase variant)
✅ DASHBOARD.TOTALVALUE → 'Total Value' (uppercase variant)

FIXES:
- Orders page now displays proper English labels
- Navbar search shows 'Search' instead of 'common.search'
- Order status filters display correctly
- All dashboard statistics show English text

All translation keys for orders and navbar are now complete.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -134,7 +134,15 @@
     "recentOrders": "Recent Orders",
     "recentMessages": "Recent Messages",
     "ordersAndSales": "Orders & Sales",
-    "viewAllOrders": "View All Orders"
+    "viewAllOrders": "View All Orders",
+    "pending": "Pending",
+    "intransit": "In Transit",
+    "totalvalue": "Total Value"
+  },
+  "DASHBOARD": {
+    "PENDING": "Pending",
+    "INTRANSIT": "In Transit",
+    "TOTALVALUE": "Total Value"
   },
   "rfq": {
     "postTradeRequest": "Post a Trade Request (RFQ)",
@@ -151,7 +159,10 @@
     "create": "Post a Trade Request (RFQ)"
   },
   "common": {
-    "view": "View"
+    "view": "View",
+    "search": "Search",
+    "searchOrders": "Search orders by ID, product, or supplier...",
+    "all": "All"
   },
   "empty": {
     "noOrders": "No orders yet",
