docs: Add comprehensive role-based navigation documentation
Complete guide covering philosophy, implementation, and testing

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -164,6 +164,15 @@
     "searchOrders": "Search orders by ID, product, or supplier...",
     "all": "All"
   },
+  "buyer": {
+    "searchPlaceholder": "Search products, suppliers, RFQs..."
+  },
+  "seller": {
+    "searchPlaceholder": "Search RFQs, buyers, orders..."
+  },
+  "admin": {
+    "searchPlaceholder": "Global search: users, RFQs, transactions..."
+  },
   "empty": {
     "noOrders": "No orders yet",
     "noOrdersDesc": "Your recent orders will appear here.",
