--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,13 +1,14 @@
 {
   "trade_trust_thrive": "Trade. Trust. Thrive.",
   "hero_subtitle": "A Pan-African B2B marketplace where verified African suppliers, buyers, and logistics partners build, trade, and scale safely across 54 countries.",
+  "early_access_signal": "Afrikoni is expanding its verified network",
   "search_placeholder": "Search verified products, suppliers, or post an RFQ…",
   "buy_source": "Buy / Source Products",
   "sell_products": "Sell Products",
   "ship_goods": "Ship Goods",
   "explore_supply": "Explore African Supply",
   "explore_supply_subtitle": "Browse verified products by category and country, or fast-track sourcing with a protected RFQ when you need suppliers to come to you.",
-  "active_54": "Active across 54 African countries",
+  "active_54": "Designed for trade across 54 African countries",
   "why_afrikoni": "Why Afrikoni",
   "verified_only": "Verified Only",
   "verified_only_desc": "Only vetted African suppliers",
@@ -16,7 +17,7 @@
   "countries_54": "54 Countries",
   "countries_54_desc": "Pan-African reach",
   "growing_network": "Growing Network",
-  "growing_network_desc": "Active daily",
+  "growing_network_desc": "New suppliers onboarding regularly",
   "quick_access": "Quick Access",
   "view_all_countries": "View All Countries",
   "source_by_country": "Source by Country",
